# ChatGpt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  LICENSE  MIGRATION_TARGET.md  PUBLICATION_BOUNDARY.md  QA-rapport.md  README  README.md  README.txt  SCIENTIFIC_INTEGRITY.md  agent.md  app.css  app.html  app.js  authorized_keys  codebase.html  dummy-file.md  index-blank.html  index.html  index_v2.html  manifest.webmanifest  markdown.html  medium.csv  medium.xml  netlify.toml  package-lock.json  package.json  requirements.txt  service-worker.js  vangard.html  vite.config.js
.github/: CODEOWNERS  pull_request_template.md
Assets/: .gitkeep
Inactive/: package-lock.json  package.json  server.js
ai/: control-report.md  control-report.template.md  session-proof.json  session-proof.template.json
blank/: README.md  index.html
config/: netlify.toml
crates/sim-core/: Cargo.toml
crates/sim-core/src/: lib.rs  main.rs
docs/: AI_GATE_LIVE_GOOD.md  AI_GATE_LIVE_HOSTILE.md  AI_GATE_LIVE_SCOPE_TEST.md  AI_GATE_OUT_OF_SCOPE.md  AI_RESPONSE_STYLE_GUIDE.md  AUDIO_DECONSTRUCTION_EXPERIMENT_TRIO.md  BROWSER_WASM_PARITY_PROTOCOL.md  BUGFIX_SAVE_EXPORT_LAYOUT_REPORT_2026-02-25.md  CHANGELOG.md  COLLABORATION_PROVENANCE.md  DEPLOY_MAIN_2026-02-25.md  DEPLOY_STATUS_REPORT.md  HANDLINGSPLAN_UI_PDF_2026-02-26.md  HARMONIC_RECOVERY_SYNTHETIC_EVIDENCE.md  MOBILE_PWA_NOTIFICATION_PLAN.md  NETLIFY_ACCESS.md  NETLIFY_SETUP_FROM_PREVIOUS_DEPLOY.md  PR_FOLLOWUP_FIX_REPORT.md  PR_UNMERGED_TASKS_COLLECTION.md  SECURITY_DEPENDENCY_PLAN.md  STATE.md  (+7 more)
(+100 files in other folders)
